# OSSP_OpenSource

./: ConfigDrafting.txt  Drafting.txt  README.md  config.json
building/: README.md  build_macos_sysroot.sh
macos_packager/: README.md  macho.h  main.cpp
macos_packager/icon/: LICENSE
macos_packager/launcher/: CMakeLists.txt  macho.c  main.cpp
src/: CMakeLists.txt  build.sh  buildTests.sh  config.json  configHandler.c  configHandler.h  discordrpc.c  discordrpc.h  dscrdrpc.c  dscrdrpc.h  localMusicHandler.cpp  localMusicHandler.hpp  localRadioDBHandler.c  localRadioDBHandler.h  main.c  openSubSonic.c  runTests.c  socket.c  socket.h
src/gui/: gui_entry.cpp  gui_entry.hpp
src/libopensubsonic/: crypto.c  crypto.h  endpoint_getAlbum.c  endpoint_getAlbum.h  endpoint_getAlbumList.c  endpoint_getAlbumList.h  endpoint_getArtist.c  endpoint_getArtist.h  endpoint_getArtists.c  endpoint_getArtists.h  endpoint_getInternetRadioStations.c  endpoint_getInternetRadioStations.h  endpoint_getLyricsBySongId.c  endpoint_getLyricsBySongId.h  endpoint_getPlaylist.c  endpoint_getPlaylist.h  endpoint_getPlaylists.c  endpoint_getPlaylists.h  endpoint_getSong.c  endpoint_getSong.h  endpoint_getStarred.c  endpoint_getStarred.h  endpoint_ping.c  endpoint_ping.h  endpoint_scrobble.c  endpoint_scrobble.h  httpclient.c  httpclient.h  scrobble_lastFm.c  scrobble_lastFm.h  scrobble_listenBrainz.c  scrobble_listenBrainz.h  utils.c  utils.h
src/player/: playQueue.cpp  playQueue.hpp  player.c  player.h
src/socket/: socket.c  socket.h  socketActions.c  socketActions.h
src_qt/: CMakeLists.txt
